# 42.Python_for_data_science

./: README.md
0_starting/ex00/: Hello.py
0_starting/ex01/: format_ft_time.py
0_starting/ex02/: find_ft_type.py  tester.py
0_starting/ex03/: NULL_not_found.py
0_starting/ex04/: tester.py  whatis.py
0_starting/ex05/: building.py  tester.py
0_starting/ex06/: filterstring.py  ft_filter.py  tester1.py  tester2.py  tests1.json  tests2.json
0_starting/ex07/: sos.py  tester.py  tests.json
0_starting/ex08/: Loading.py
0_starting/ex09/: LICENSE  README.md  example.py  pyproject.toml  tests.txt
0_starting/ex09/ft_package/: __init__.py  count.py
